--- a/postal_ballet/google_map_location_update.html
+++ b/postal_ballet/google_map_location_update.html
@@ -214,7 +214,7 @@
                         </td>
                         <td>
                             <a href="${finalMapHref}" target="_blank" class="map-link">
-                                Open Map
+                                Map
                             </a>
                         </td>
                     </tr>
